--- a/project/apps/account/docker-compose.dev.yml
+++ b/project/apps/account/docker-compose.dev.yml
@@ -19,7 +19,7 @@ services:
   typeoteka.user.mongo.ui:
     image: mongo-express:1.0.2-20
     restart: always
-    container_name: readme.user.mongo.ui
+    container_name: readme.account.mongo.ui
     ports:
       - 8081:8081
     environment:
@@ -27,7 +27,7 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PASSWORD}
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.account.mongo:${DB_PORT}/
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.account.mongo:${MONGO_PORT}/
 
 volumes:
   readme.mongo.account:
