--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "dayjs": "1.11.10",
     "joi": "17.12.3",
     "mongoose": "8.2.4",
@@ -24,32 +25,33 @@
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "18.1.2",
-    "@nx/eslint-plugin": "18.1.2",
-    "@nx/jest": "18.1.2",
-    "@nx/js": "18.1.2",
-    "@nx/nest": "18.1.2",
-    "@nx/node": "18.1.2",
-    "@nx/web": "18.1.2",
-    "@nx/webpack": "18.1.2",
-    "@nx/workspace": "18.1.2",
+    "@nx/eslint": "18.2.4",
+    "@nx/eslint-plugin": "18.2.4",
+    "@nx/jest": "18.2.4",
+    "@nx/js": "18.2.4",
+    "@nx/nest": "18.2.4",
+    "@nx/node": "18.2.4",
+    "@nx/web": "18.2.4",
+    "@nx/webpack": "18.2.4",
+    "@nx/workspace": "18.2.4",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@types/bcrypt": "5.0.2",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "~8.48.0",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "18.1.2",
+    "nx": "18.2.4",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2",
+    "typescript": "5.4.5",
     "webpack-cli": "^5.1.4"
   }
 }
+
