--- a/project/package.json
+++ b/project/package.json
@@ -48,6 +48,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "18.2.4",
     "prettier": "^2.6.2",
+    "prisma": "5.12.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.4.5",
