--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -18,8 +18,9 @@
     "paths": {
       "@project/account-config": ["libs/account/config/src/index.ts"],
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
-      "@project/blog-config": ["libs/blog/config/src/index.ts"],
       "@project/blog-comment": ["libs/blog/blog-comment/src/index.ts"],
+      "@project/blog-config": ["libs/blog/config/src/index.ts"],
+      "@project/blog-like": ["libs/blog/blog-like/src/index.ts"],
       "@project/blog-models": ["libs/blog/models/src/index.ts"],
       "@project/blog-post": ["libs/blog/blog-post/src/index.ts"],
       "@project/blog-user": ["libs/account/blog-user/src/index.ts"],
