Добавил установку `RabbitMQ`.
Следующим шагом установим брокер сообщений. В качестве брокера
воспользуемся RabbitMQ. Установку выполним с помощью Docker. Для этого откроем `docker-compose.yml`, расположенный в корневой директории сервиса notification и добавим ещё одну секцию для описания RabbitMQ.

В качестве образа воспользуемся `rabbitmq:3.11-management`. Он включает сам RabbitMQ и веб-интерфейс для администрирования. С помощью веб-интерфейса мы сможем просматривать очереди, создавать новые и выполнить многие другие действия, связанные с администрированием Rabbit.

Обратите внимание на секцию `ports`. Наружу мы пробрасываем два порта `1088` (`15672`) и `5672` (`5672`). На первом доступен веб-интерфейс для администрирования (`http://localhost:1088`), а на втором служба RabbitMQ. С ней установим соединение из сервиса `notification`.

Также обратите внимание на секцию `healthcheck`. Проверять доступность Rabbit мы будем с помощью утилиты `rabbitmq-diagnostics`.

--- a/project/apps/notification/notify.compose.dev.yml
+++ b/project/apps/notification/notify.compose.dev.yml
@@ -2,8 +2,26 @@ version: '3.9'
 services:
   readme.notification.fakesmtp:
     image: gessnerfl/fake-smtp-server:2.2.0
-    container_name: "readme.notify.fakesmtp"
-    hostname: "readme.notify.fakesmtp"
+    container_name: "readme.notification.fakesmtp"
+    hostname: "readme.notification.fakesmtp"
     ports:
       - "8025:8025"
       - "1085:8080"
+
+  readme.notification.rabbitmq:
+    image: rabbitmq:3.11-management
+    container_name: readme.notification.rabbitmq
+
+    ports:
+      - '1088:15672'
+      - '5672:5672'
+
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 10s
+      timeout: 5s
+      retries: 5
