--- a/project/apps/notification/notify.compose.dev.yml
+++ b/project/apps/notification/notify.compose.dev.yml
@@ -26,41 +26,40 @@ services:
       timeout: 5s
       retries: 5
 
-  readme.notification.mongodb:
-      image: mongo:4.4
-      container_name: readme.notification.mongodb
+  readme.notification.mongo:
+    image: mongo:4.4
+    restart: always
+    container_name: readme.notification.mongo
 
-      environment:
-        MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-        MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-        MONGO_INITDB_DATABASE: ${MONGO_DB}
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
 
-      ports:
-        - ${MONGO_PORT}:27017
+    ports:
+      - ${MONGO_PORT}:27017
 
-      volumes:
-        - readme.notification.mongodb:/data/db
+    volumes:
+      - readme.mongo.notification:/data/db
 
-      healthcheck:
+    healthcheck:
         test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/readme-notification --quiet
         interval: 10s
         timeout: 10s
         retries: 5
-
-  readme.notification.mongodb.ui:
+        
+  readme.notification.mongo.ui:
     image: mongo-express:1.0-20
     restart: always
-    container_name: readme.notification.mongodb.ui
-
+    container_name: readme.notification.mongo.ui
     ports:
       - 8086:8081
-
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_USER}
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.notification.mongodb:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.notification.mongo:27017/
 
 volumes:
-  readme.notification.mongodb:
+  readme.mongo.notification:
