--- a/project/package.json
+++ b/project/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "5.3.0",
+    "@nestjs-modules/mailer": "1.11.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.2.1",
     "@nestjs/core": "^10.0.2",
@@ -51,6 +52,7 @@
     "@types/jest": "^29.4.0",
     "@types/multer": "1.4.11",
     "@types/node": "~18.16.9",
+    "@types/nodemailer": "6.4.15",
     "@types/passport": "1.0.16",
     "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
